--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -235,6 +235,8 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.197.157.85;
+allow 18.236.178.175;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
@@ -284,6 +286,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -906,6 +909,8 @@ allow 2.58.56.220;
 allow 2.58.56.233;
 allow 2.58.56.35;
 allow 2.58.56.43;
+allow 2600:1f13:e60:ea00:23a1:d09e:4d28:40c8;
+allow 2600:1f16:14df:6d00:fa54:d82a:9008:bdff;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -1133,6 +1138,8 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
+allow 2a05:d014:1527:3400:10e:d620:3542:1bc9;
+allow 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1464,6 +1471,7 @@ allow 2a14:7c2:10ec::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
+allow 3.14.249.60;
 allow 3.14.5.3;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1474,6 +1482,7 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
+allow 3.76.125.118;
 allow 38.97.116.244;
 allow 45.11.59.28;
 allow 45.118.133.44;
