--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -235,6 +235,8 @@ deny 179.43.159.78;
 deny 179.43.182.232;
 deny 179.43.182.58;
 deny 180.150.226.99;
+deny 18.197.157.85;
+deny 18.236.178.175;
 deny 185.100.85.132;
 deny 185.100.85.22;
 deny 185.100.85.23;
@@ -284,6 +286,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.183.157.214;
@@ -906,6 +909,8 @@ deny 2.58.56.220;
 deny 2.58.56.233;
 deny 2.58.56.35;
 deny 2.58.56.43;
+deny 2600:1f13:e60:ea00:23a1:d09e:4d28:40c8;
+deny 2600:1f16:14df:6d00:fa54:d82a:9008:bdff;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -1133,6 +1138,8 @@ deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
+deny 2a05:d014:1527:3400:10e:d620:3542:1bc9;
+deny 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
@@ -1464,6 +1471,7 @@ deny 2a14:7c2:10ec::1;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.220.75.237;
+deny 3.14.249.60;
 deny 3.14.5.3;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1474,6 +1482,7 @@ deny 37.228.129.5;
 deny 37.228.129.63;
 deny 37.48.120.196;
 deny 37.48.70.156;
+deny 3.76.125.118;
 deny 38.97.116.244;
 deny 45.11.59.28;
 deny 45.118.133.44;
