--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -235,6 +235,8 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 18.197.157.85;
+set_real_ip_from 18.236.178.175;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
@@ -284,6 +286,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
@@ -906,6 +909,8 @@ set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.233;
 set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
+set_real_ip_from 2600:1f13:e60:ea00:23a1:d09e:4d28:40c8;
+set_real_ip_from 2600:1f16:14df:6d00:fa54:d82a:9008:bdff;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -1133,6 +1138,8 @@ set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
+set_real_ip_from 2a05:d014:1527:3400:10e:d620:3542:1bc9;
+set_real_ip_from 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
@@ -1464,6 +1471,7 @@ set_real_ip_from 2a14:7c2:10ec::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
+set_real_ip_from 3.14.249.60;
 set_real_ip_from 3.14.5.3;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1474,6 +1482,7 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
+set_real_ip_from 3.76.125.118;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
