--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -284,6 +284,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.168.194.63;
 allow 185.170.114.25;
@@ -492,6 +493,7 @@ allow 185.227.68.78;
 allow 185.231.102.51;
 allow 185.233.100.23;
 allow 185.235.146.29;
+allow 185.238.121.3;
 allow 185.241.208.115;
 allow 185.241.208.202;
 allow 185.241.208.204;
@@ -859,6 +861,7 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
+allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -885,7 +888,6 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
-allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
@@ -917,7 +919,6 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
-allow 2602:2e6:0:4::;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:10:dbf5:1:1:fa9:a55;
 allow 2602:fc24:12:81a6::1;
@@ -1121,6 +1122,7 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:129:2098::1;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9b87:500::3;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1541,7 +1543,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.182;
 allow 45.84.107.198;
@@ -1638,6 +1639,7 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 79.132.143.85;
+allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
