--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -491,6 +491,7 @@ deny 185.227.68.78;
 deny 185.231.102.51;
 deny 185.233.100.23;
 deny 185.235.146.29;
+deny 185.238.121.3;
 deny 185.241.208.115;
 deny 185.241.208.202;
 deny 185.241.208.204;
@@ -606,7 +607,6 @@ deny 192.42.116.28;
 deny 192.99.149.111;
 deny 193.105.134.150;
 deny 193.105.134.155;
-deny 193.142.147.196;
 deny 193.189.100.194;
 deny 193.189.100.195;
 deny 193.189.100.196;
@@ -853,7 +853,6 @@ deny 23.137.253.110;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.137;
-deny 23.137.254.217;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
@@ -918,7 +917,6 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:fc24:10:61b::1;
-deny 2602:fc24:10:dbf5:1:1:fa9:a55;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
@@ -1120,6 +1118,7 @@ deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:129:2098::1;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9b87:500::3;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
@@ -1385,7 +1384,6 @@ deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:8e09::1;
-deny 2a0f:ca80:1337::c6d6:b183;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
