--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -859,6 +859,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.182;
 allow 45.84.107.198;
