--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -86,6 +86,7 @@ allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.120.157.137;
 allow 109.169.33.163;
+allow 109.228.160.26;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -781,6 +782,7 @@ allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:9b0:258:c600::1000;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:9e54::b;
 allow 2001:b030:2422::7234;
@@ -846,6 +848,7 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -1147,6 +1150,7 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
+allow 2a0a:3840:8078:28:0:504e:1c2e:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
 allow 2a0b:4142:7ca::2;
@@ -1557,6 +1561,7 @@ allow 51.222.142.67;
 allow 51.38.225.46;
 allow 51.81.222.62;
 allow 51.81.33.188;
+allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.206;
@@ -1626,6 +1631,7 @@ allow 78.142.18.219;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
+allow 80.78.28.46;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 80.94.92.92;
@@ -1635,6 +1641,7 @@ allow 8.218.9.41;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
+allow 82.7.89.242;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 84.16.224.227;
