--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -101,6 +101,7 @@ deny 2001:67c:e28:1::2;
 deny 2001:67c:e28:1::3;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
+deny 2001:9b0:258:c600::1000;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:9e54::b;
 deny 2001:b030:2422::7234;
@@ -369,6 +370,7 @@ deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
+deny 2a0a:3840:8078:28:0:504e:1c2e:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:4142:7ca::2;
