--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -86,6 +86,7 @@ set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.120.157.137;
 set_real_ip_from 109.169.33.163;
+set_real_ip_from 109.228.160.26;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
 set_real_ip_from 109.70.100.2;
@@ -781,6 +782,7 @@ set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:9b0:258:c600::1000;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:9e54::b;
 set_real_ip_from 2001:b030:2422::7234;
@@ -846,6 +848,7 @@ set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
+set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
@@ -1147,6 +1150,7 @@ set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:b280:fe01:61::a;
+set_real_ip_from 2a0a:3840:8078:28:0:504e:1c2e:1337;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:4140:6c6c::2;
 set_real_ip_from 2a0b:4142:7ca::2;
@@ -1557,6 +1561,7 @@ set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.38.225.46;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.81.33.188;
+set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.206;
@@ -1626,6 +1631,7 @@ set_real_ip_from 78.142.18.219;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
+set_real_ip_from 80.78.28.46;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 80.94.92.106;
 set_real_ip_from 80.94.92.92;
@@ -1635,6 +1641,7 @@ set_real_ip_from 8.218.9.41;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
+set_real_ip_from 82.7.89.242;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 84.16.224.227;
