--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -639,6 +639,7 @@ deny 194.26.192.161;
 deny 194.26.192.72;
 deny 194.26.192.77;
 deny 194.26.192.97;
+deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.26.245.180;
@@ -875,6 +876,7 @@ deny 23.154.177.4;
 deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
+deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.8.104;
 deny 23.184.48.254;
@@ -1022,7 +1024,6 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
-deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -1101,7 +1102,6 @@ deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
-deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1401,6 +1401,7 @@ deny 2a10:1fc0:1::c758:3168;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:142;
 deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:1:1:194:26:192:77;
@@ -1566,13 +1567,13 @@ deny 5.196.95.34;
 deny 5.255.100.206;
 deny 5.255.100.219;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.102.89;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.106.172;
 deny 5.255.109.236;
 deny 5.255.111.64;
-deny 5.255.114.171;
 deny 5.255.115.58;
 deny 5.255.117.56;
 deny 5.255.118.183;
@@ -1654,7 +1655,6 @@ deny 87.118.116.12;
 deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
-deny 87.120.254.132;
 deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
